--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,14 @@
 @import "{{ site.theme }}";
 
-body {
-background: "yellow"
-}
+  .btn {
+    color: #0000ff;
+    border-color: #0000ff; 
+    // background-color: #008CBA;
+  } 
+
+  .btn:hover {
+    color: #0bb6e1cc;
+    text-decoration: none;
+    background-color: #7c940ea1;
+    border-color: #0000ff;
+  }
