--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,3 +10,11 @@ body {
 .page-header {
   background-image: linear-gradient(118deg, #7acfd4, #ffafaf);
 }
+
+a {
+    color: #ffafaf;
+}
+
+:is(h1, h2, h3, h4, h5, h6) {
+    color: #7acfd4
+}
