added header colro

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,8 @@ body {
 
 .page-header {
   background-image: linear-gradient(118deg, #7acfd4, #ffafaf);
+//   set color to elegent dark gray
+  color: #333;
 }
 
 a {
