--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,9 +14,9 @@ body {
 }
 
 a {
-    color: #ffafaf;
+    color: #ff7c7c;
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
-    color: #7acfd4
+    color: #1fc7cf
 }
