--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,9 +14,9 @@ body {
 }
 
 a {
-    color: #ff7c7c;
+    color: #fc1b1b;
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
-    color: #1fc7cf !important
+    color: #04c2cc !important
 }
