--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 body {
-  background-color: rgb(241, 225, 6);
+  background-color: white;
 }
 
 .page-header {
@@ -18,5 +18,5 @@ a {
 }
 
 :is(h1, h2, h3, h4, h5, h6) {
-    color: #04c2cc !important
+    color: rgb(241, 225, 6);
 }
