--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,22 @@ a {
     color: #fc1b1b;
 }
 
-:is(h1, h2, h3, h4, h5, h6) {
+h1 {
+    color: rgb(241, 225, 6);
+}
+
+h2 {
+    color: rgb(241, 225, 6);
+}
+h3 {
+    color: rgb(241, 225, 6);
+}
+h4 {
+    color: rgb(241, 225, 6);
+}
+h5 {
+    color: rgb(241, 225, 6);
+}
+h6 {
     color: rgb(241, 225, 6);
 }
