--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,22 +17,10 @@ a {
     color: #fc1b1b;
 }
 
-h1 {
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
     color: rgb(241, 225, 6);
 }
 
-h2 {
-    color: rgb(241, 225, 6);
-}
-h3 {
-    color: rgb(241, 225, 6);
-}
-h4 {
-    color: rgb(241, 225, 6);
-}
-h5 {
-    color: rgb(241, 225, 6);
-}
-h6 {
-    color: rgb(241, 225, 6);
+h1, h2, h3, h4, h5, h6 {
+    color: rgb(44, 41, 0);
 }
