--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,9 +8,8 @@ body {
 }
 
 .page-header {
-  background-color: rgb(241, 225, 6)
+  background-color: rgb(241, 225, 6);
   
-//   set color to elegent dark gray
   color: #333;
 }
 
