--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,9 +8,9 @@ body {
 }
 
 .page-header {
-  background-color: rgb(241, 225, 6);
+  background: rgb(241, 225, 6);
   
-  color: #333;
+  color:black;
 }
 
 a {
