--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,20 +7,17 @@ body {
   background-image: linear-gradient(118deg, #7acfd4, #ffafaf);
 }
 
-.page-header {
-  background: rgb(241, 225, 6);
-  
-  color:black;
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: "white";
 }
 
-a {
-    color: #fc1b1b;
-}
-
-.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-    color: rgb(44, 41, 0);
-}
-
-h1, h2, h3, h4, h5, h6 {
-    color: 'white';
+h1 {
+  -webkit-text-stroke: 1px black;
+  -webkit-text-fill-color: yellow;
+  text-decoration: none;
 }
