--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,13 @@
 
 @import "{{ site.theme }}";
 
+a {
+  color: '#0a0a0a !important';
+}
+
 body {
   background-image: linear-gradient(118deg, #00c5cf, #fd3030);
+  color: '#0e0e0e';
 }
 
 
@@ -16,9 +21,6 @@ h6 {
   color: "white";
 }
 
-a {
-  color: '#0a0a0a';
-}
 
 h1 {
   -webkit-text-stroke: 1px black;
