--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@ a {
 }
 
 body {
-  background-image: linear-gradient(118deg, #00c5cf, #fd3030);
+  background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
   color: '#0e0e0e';
 }
 
