--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,12 +4,12 @@
 @import "{{ site.theme }}";
 
 a {
-  color: '#0a0a0a !important';
+  color: #0a0a0a !important;
 }
 
 body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
-  color: '#0e0e0e';
+  color: #0e0e0e;
 }
 
 
