--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,13 +5,15 @@
 
 a {
   color: #0a0a0a !important;
+  font-weight: bold;
+  //  yellow underline
+  text-decoration: underline;
 }
 
 body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
   color: #0e0e0e;
 }
-
 
 h2,
 h3,
@@ -20,7 +22,6 @@ h5,
 h6 {
   color: "white";
 }
-
 
 h1 {
   -webkit-text-stroke: 1px black;
