--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,8 @@ a {
 body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
   color: #0e0e0e;
+  // set height to viewport height
+  height: 100vh;
 }
 
 h2,
