--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,10 @@ a {
   color: #0a0a0a !important;
   font-weight: bold;
   //  yellow underline
+  text-decoration: dotted;
+}
+
+a:hover {
   text-decoration: underline;
 }
 
