--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>Created and maintained with ❤️ by <a href="{{ site.github.owner_url }}">Bo An</a></p>
+        <p><small>Created and maintained with ❤️ by <a href="{{ site.github.owner_url }}">Bo An</a></small></p>
         {% endif %}
         <p><small></small></p>
       </footer>
