--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,9 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
+.logo {
+  max-width: 60%;
+}
 body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
   color: #0e0e0e;
