--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,7 +14,7 @@ a:hover {
   text-decoration: underline;
 }
 .logo {
-  max-width: 60%;
+  max-width: 250px;
 }
 body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
