--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,13 +4,14 @@
 @import "{{ site.theme }}";
 
 a {
-  color: #0a0a0a !important;
+  color: #0a0a0a;
   font-weight: bold;
   //  yellow underline
   text-decoration: dotted;
 }
 
 a:hover {
+  color: yellow;
   text-decoration: underline;
 }
 .logo {
