--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,8 @@ a:hover {
 }
 body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
   color: #0e0e0e;
   // set height to viewport height
   height: 100vh;
