--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view">Report bugs on Github <a href="https://github.com/boan-anbo/paper-timer-public/issues">issues</a></a></p>
+        <p class="view"><small>Report bugs on Github <a href="https://github.com/boan-anbo/paper-timer-public/issues">issues</a></small></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
