--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,7 @@ a:hover {
 body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
   background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-size: 100% 100%;
   color: #0e0e0e;
   // set height to viewport height
   height: 100vh;
