--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,13 +17,11 @@ a:hover {
 .logo {
   max-width: 150px;
 }
-body {
+html {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: 100% 100%;
   color: #0e0e0e;
-  // set height to viewport height
-  height: 100vh;
 }
 
 h2,
