--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,10 +17,10 @@ a:hover {
 .logo {
   max-width: 150px;
 }
-html {
+body {
   background-image: linear-gradient(118deg, #8bced1, #fa9d9d);
   background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: 100% 100%;
+  background-size: 100% 150%;
   color: #0e0e0e;
 }
 
