--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,8 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
+        <p class="view"><small>Request features and report bugs on Github <a href="https://github.com/boan-anbo/paper-timer-public/issues">issues</a></small></p>
         <p><small>Created and maintained with ❤️ by <a href="{{ site.github.owner_url }}">Bo An</a></small></p>
-        <p class="view"><small>Report bugs on Github <a href="https://github.com/boan-anbo/paper-timer-public/issues">issues</a></small></p>
         {% endif %}
       </footer>
     </div>
