--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ a {
   color: #0a0a0a;
   font-weight: bold;
   //  yellow underline
-  text-decoration: dotted;
+  text-decoration: underline;
 }
 
 a:hover {
