--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@ a {
   font-weight: bold;
   //  yellow underline
   text-decoration: underline;
+  text-decoration-color: yellow;
 }
 
 a:hover {
@@ -36,4 +37,14 @@ h1 {
   -webkit-text-stroke: 1px black;
   -webkit-text-fill-color: yellow;
   text-decoration: none;
+}
+
+code {
+    color: #333;
+    background-color: white;
+    border-radius: 10px;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
 }
