--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,7 +35,7 @@ h6 {
 
 h1 {
   -webkit-text-stroke: 1px black;
-  -webkit-text-fill-color:rgb(241, 225, 6);
+  -webkit-text-fill-color:yellow;
   text-decoration: none;
 }
 
