--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,18 +35,18 @@ h6 {
 
 h1 {
   -webkit-text-stroke: 1px black;
-  -webkit-text-fill-color:yellow;
+  -webkit-text-fill-color: yellow;
   text-decoration: none;
 }
 
 code {
-    color: #333;
-    background-color: white;
-    border-radius: 10px;
-    padding-left: 1%;
-    padding-right: 1%;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
+  color: #333;
+  background-color: white;
+  border-radius: 10px;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
 }
 
 dd {
@@ -60,4 +60,7 @@ li {
 
 img {
   filter: drop-shadow(0.1rem 0.2em 0.2rem rgba(0, 0, 0, 0.5));
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
