--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p><small>Created and maintained with ❤️ by <a href="{{ site.github.owner_url }}">Bo An @ 2022\n(bo.an AT yale.edu)</a></small></p>
+        <p><small>Created and maintained with ❤️ by <a href="{{ site.github.owner_url }}">Bo An @ 2022</a></small></p>
         {% endif %}
       </footer>
     </div>
