--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 class="text-center"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
           <img class="logo" src="{{site.logo | relative_url}}" alt="Logo" />
@@ -23,7 +23,7 @@
 
         <p id="tag-line">{{ site.description | default: site.github.project_tagline }}</p>
         {% if site.github.is_project_page %}
-        <p class="view"><small>Request features and report bugs on Github <a href="https://github.com/boan-anbo/paper-timer-public/issues">issues</a></small></p>
+        <p class="text-center" class="view"><small>Request features and report bugs on Github <a href="https://github.com/boan-anbo/paper-timer-public/issues">issues</a></small></p>
         {% endif %}
 
 
