--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta property="og:image" content="/assets/icon.png">
+<meta property="og:image" class="social-preview" content="/assets/icon.png">
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
