--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta property="og:image" class="social-preview" content="/assets/icon.png">
+<meta property="og:image" class="social-preview" content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true">
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
