--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <meta property="og:image" class="social-preview"
     content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true">
 
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image"
     content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true" />
   {% seo %}
