--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
   <meta property="og:image" class="social-preview"
     content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true">
 
-  <meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:card" content="summary"></meta>
   <meta name="twitter:image"
-    content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true" />
+    content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true" ></meta>
   {% seo %}
   <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   <!--[if lt IE 9]>
