--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta property="og:title" content="Paper Timer" />
-<meta property="og:image" class="social-preview" content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true">
-<meta name="twitter:image" content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon.png?raw=true" />
+<meta property="og:image" class="social-preview" content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon-preview.jpg?raw=true">
+<meta name="twitter:image" content="https://github.com/boan-anbo/paper-timer-public/blob/gh-pages/assets/icon-preview.jpg?raw=true" />
 <meta name="twitter:card" content="summary_large_image" />
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
